--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ZeroToHeroAndroidTDD</string>
     <string name="titleTextView">I am an Android Developer!</string>
+    <string name="change">change</string>
 </resources>
