--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ZeroToHeroAndroidTDD</string>
     <string name="helloWorld">Hello World!</string>
     <string name="change">change</string>
 </resources>
