--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="helloWorld">Hello World!</string>
     <string name="change">change</string>
     <string name="hide">hide</string>
+    <string name="remove">remove</string>
 </resources>
