--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ZeroToHeroAndroidTDD</string>
+    <string name="zero">0</string>
+    <string name="increment">+</string>
+    <string name="decrement">-</string>
 </resources>
